# Master_thesis

./: CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: cap_req_firm_inno.tex  cap_req_firm_inno_pres.tex  task_paper.py
src/cap_req_firm_inno/: __init__.py
src/cap_req_firm_inno/analysis/: 06_Baseline_regression.R  08_Heterogenous_effects_fin_dependence_sectors.R  09_heterogeneous_effects_loan_maturity.R  10_heterogeneous_effects_market_to_book_age.R  12_Robustness_checks_threshold.R  13_Robustness_checks_binning.R  14_Robustness_checks_diff_outcome.R  15_Triple_did.R  16_Descriptives.R  17_Common_pre_trends.R  Baseline_regression.R  Common_pre_trends.R  Descriptives.R  Heterogenous_effects_fin_dependence_sectors.R  Robustness_checks.R  Robustness_checks_binning.R  Robustness_checks_diff_outcome.R  Robustness_checks_threshold.R  descriptive.R  heterogeneous_effects_market_to_book_age.R  task_analysis.py
src/cap_req_firm_inno/data_management/: 01_bank_built.py  02_dealscan_built.py  03_firm_data_built.py  04_data_prep.R  05_Matching.R  07_fin_dependence_data_prepper.R  11_Robustness_checks_data_prepper.R  Dealscan_built.py  Firm_data_built.py  Matching.R  Robustness_checks_data_prepper.R  __init__.py  bank_built.py  data_prep.R  fin_dependence_data_prepper.R  task_data_management.py
src/cap_req_firm_inno/final/: __init__.py  task_final.py
