[metadata]
name = cap_req_firm_inno
description = Basel III Capital Requirements: Effects on Firm Innovation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fotfake1/cap_req_firm_inno
author = Luis Enrique Kaiser
author_email = s6lukais@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/Fotfake1/cap_req_firm_inno
    Documentation = https://github.com/Fotfake1/cap_req_firm_inno
    Github = https://github.com/Fotfake1/cap_req_firm_inno
    Tracker = https://github.com/Fotfake1/cap_req_firm_inno/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/cap_req_firm_inno/_version.py
